--- a/.classpath
+++ b/.classpath
@@ -7,5 +7,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="C:/Users/rbajya.ORADEV/Desktop/jars/data-structure.jar"/>
+	<classpathentry kind="lib" path="C:/Users/rbajya.ORADEV/Downloads/chrome downloads/ojdbc6 (1).jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
